# Biscuit-Engine

./: .gitignore  README.md  TODO.md  build_linux.sh  build_windows.sh
biscuit-editor/: CMakeLists.txt  main.cpp
biscuit-editor/interface/: BiscuitEditor.h
biscuit-editor/interface/types/: interfaces.h  interfaces_impl.h
biscuit-editor/src/: BiscuitEditor.cpp
editor/: CMakeLists.txt  main.cpp
editor/include/components/: Hierarchy.h
editor/interface/types/: interfaces_impl.h  types.h
editor/src/: BiscuitEditor.cpp
editor/src/components/: Hierarchy.cpp
engine/: CMakeLists.txt  README.md
engine/behaviour/: TBT3dArrowBehaviour.cpp  ThrottleBehaviour.cpp
engine/behaviour/header/: ExampleBehaviour.h  TBT3dArrowBehaviour.h  ThrottleBehaviour.h  UserBehaviours.h  headerMaker.py
engine/common/: StringHelper.h
engine/data/: GUI.components.json  GUI.configration.json
engine/include/: EngineDebugger.h  FIleManager.h  GUIBuilder.h
engine/interface/: BakeBehaviour.h  BiscuitEngine.h  ExampleBehaviour.h  GUIBuilder.h  README.md  engineTypes.h  types.h
engine/src/: BakeBehaviour.cpp  BiscuitEngine.cpp  EngineDebugger.cpp  FileManager.cpp  GUIBuilder.cpp
gui/: CMakeLists.txt  README.md  main.cpp
gui/data/: applicationParameters.json
gui/include/: BIscuitGUI.h  BiscuitGUI.h  VulkanAPI.h  VulkanHelper.h  VulkanTypes.h  guiTypes.h  types.h
gui/shaders/: compile_shader.bat  compile_shader.sh  frag.frag  frag.spv  vert.vert
gui/src/: BiscuitGUI.cpp  VulkanAPI.cpp  VulkanHelper.cpp
tool/: dir_tree.py
